# ailiance-models-tuning

./: .env.example  CLAUDE.md  README.md  pyproject.toml
configs/: CLAUDE.md
datasets/builders/: __init__.py  build_kicad_d2_combined.py  build_stm32_dataset.py  expand_espidf.py
docs/: DOMAINS.md  RECIPES.md
scripts/: CLAUDE.md  build_all_datasets.sh  eval_adapters.py  eval_mascarade_lora.py  publish_adapters.py  ship_mascarade.py  train_sft.py
scripts/ops/: ship_qwen3_mascarade.sh  ship_qwen3_mascarade_retry5.sh  wait_and_eval.sh
src/: CLAUDE.md
src/ailiance_tuning/: __init__.py  config.py  registry.py
tests/: CLAUDE.md  test_config.py  test_registry.py
tools/: pii_scan.py
